--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -58,7 +58,7 @@
 <!-- Code from Materialize.com for cards -->
 {% for technology in technologies %}
 <div class="col s12 m7">
-  <div class="card horizontal small hoverable">
+  <div class="card horizontal medium hoverable">
     <div class="card-image">
       <img src="{{ technology.technology_image }}" alt="">
     </div>
@@ -74,12 +74,11 @@
           <li>Date added: {{ technology.added_on }}</li>
                   
         </ul>
-
       </div>
       <div class="card-action">
         
         <a href="{{ url_for('comments', technology_id=technology._id) }}" class="purple-text text-darken-4">Add or read the comments about the {{ technology.technology_name}}</a>
-        <br>
+        
         
       </div>
 
